Resize KMessageBox::detailedError at start to display all text

Quoting the BR:
'When using KMessageBox::detailedError() it sometimes doesn't resize properly to
show all the text'

commit this on behalf of Dario Andres (https://bugs.kde.org/show_bug.cgi?id=193097#c9)

BUG:193097
REVIEW:101931